tests/ui/errors/unterminated_element_error.rs
use leptos_mview::mview;

fn main() {
    _ = mview! {
        div {
            "something"
            input.input type="text"
        }
    };
}
