tests/ui/errors/unterminated_element_error.stderr
error: unterminated element
 --> tests/ui/errors/unterminated_element_error.rs:7:13
  |
7 |             input.input type="text"
  |             ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: add a `;` to terminate the element with no children
